# model-cost-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: pricing.yaml  task.yaml
docs/: methodology.md  results.md
evals/: dataset.jsonl  generate_dataset.py
src/benchmark/: __init__.py  config.py  cost.py  models.py  report.py  run.py  score.py
tests/: test_rules.py  test_score.py
