[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-cost-benchmark"
version = "0.1.0"
description = "Benchmark LLM cost and quality for support ticket urgency classification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "httpx>=0.27",
  "anthropic>=0.40",
  "openai>=1.50",
  "typer>=0.12",
  "rich>=13.0",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
